--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -415,6 +415,7 @@ main {
     justify-content: space-evenly;
     i {
         padding: 0 10px;
+        align-self: center;
     }
 }
 .button.secondary {
